test/org/midica/testfiles/failing/pattern-call-with-tremolo.midica
INCLUDE inc/instruments.midica

PATTERN pat
	0 /1
END

0 c pat tr=/4
